--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
-.App {
-  text-align: center;
+/* google fonts */
+@import url("https://fonts.googleapis.com/css2?family=Licorice&family=Lobster&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Licorice&family=Lobster&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  scroll-behavior: smooth;
+}
+body {
+  background-color: #0e1b31;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #fff;
+  font-family: "Lato", sans-serif;
+  margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1,
+h2 {
+  font-size: 2rem;
+  font-weight: 500;
 }
 
-.App-link {
-  color: #61dafb;
+p {
+  color: #fff;
+  opacity: 75%;
+  font-size: 1rem;
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+ul {
+  list-style: none;
+  margin: 0;
+}
+
+a {
+  color: unset;
+  font-family: "Lato", sans-serif;
+}
+
+a:hover {
+  color: unset;
+}
+
+section,
+footer {
+  padding: 60px 0px;
+}
+
+/* Custom scroll-bar */
+
+::-webkit-scrollbar {
+  width: 10px;
+  background: #c1ceff;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 2em;
+  background: #282f4e;
+}
+
+@media only screen and (max-width: 992px) {
+  section {
+    padding: 40px 0px;
   }
 }
