--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ h2 {
 
 p {
   color: #fff;
-  opacity: 75%;
+  opacity: 0.75;
   font-size: 1rem;
   font-family: "Rubik", sans-serif;
   font-weight: 400;
