--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -51,6 +51,10 @@
   margin-right: 15px;
 }
 
+section {
+  padding-bottom: 100px;
+}
+
 @media only screen and (max-width: 992px) {
   .about_btn {
     padding: 10px 25px;
