--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -14,18 +14,19 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 300px;
   background: linear-gradient(rgb(0, 13, 107, 0.6), rgb(0, 13, 107, 0.6));
   z-index: 91;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  transform: translateY(-100%);
+  transform: translateY(-20%);
   opacity: 0;
-  transition: 0.3s;
+  transition: 0.4s;
   border-radius: 5px;
   cursor: pointer;
+  margin: 4rem 0rem;
 }
 
 .portfolio_card:hover .portfolio_content {
@@ -48,4 +49,6 @@
 
 .portfolio_img img {
   border-radius: 5px;
+  height: 300px;
+  margin: 4rem 0rem;
 }
