--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -47,8 +47,19 @@
   font-weight: 500;
 }
 
+.portfolio_content p {
+  width: 60%;
+  text-align: left;
+  font-weight: bold;
+}
+
 .portfolio_img img {
   border-radius: 5px;
   height: 300px;
   margin: 4rem 0rem;
+}
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
 }
