Fix bugs and change button style

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,4 +1,4 @@
-.hire_btn {
+/* .hire_btn {
   background: #fff;
   color: #0e1b31;
 }
@@ -7,7 +7,7 @@
   text-decoration: none;
   font-weight: 500;
   color: #0e1b31;
-}
+} */
 
 .hire_btn:hover a {
   color: #0e1b31;
