--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* google fonts */
-@import url("https://fonts.googleapis.com/css2?family=Licorice&family=Lobster&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Licorice&family=Lobster&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Licorice&family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Licorice&family=Lobster&display=swap');
 
 * {
   margin: 0;
@@ -22,7 +22,7 @@ h4,
 h5,
 h6 {
   color: #fff;
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
   margin: 0;
 }
 
@@ -36,7 +36,7 @@ p {
   color: #fff;
   opacity: 0.75;
   font-size: 1rem;
-  font-family: "Rubik", sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-weight: 400;
 }
 
@@ -47,7 +47,7 @@ ul {
 
 a {
   color: unset;
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 a:hover {
