--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -43,6 +43,8 @@
 
 .btn:hover {
   color: #fff;
+  background-color: #17a2b8;
+  border-color: #17a2b8;
 }
 
 .mobile_menu i {
@@ -100,7 +102,7 @@
     display: block;
   }
 
-  .btn {
+  .resume_btn {
     display: none;
   }
 
