--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -43,7 +43,7 @@
 .portfolio_content h5 {
   color: #fff;
   font-size: 1.5rem;
-  margin-bottom: 10px;
+  margin-bottom: 0.75rem;
   font-weight: 500;
 }
 
@@ -58,6 +58,7 @@
   height: 300px;
   margin: 4rem 0rem;
 }
+
 .buttons {
   display: flex;
   justify-content: space-between;
