--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -51,9 +51,9 @@
   margin-right: 15px;
 }
 
-section {
+/* section {
   padding-bottom: 100px;
-}
+} */
 
 @media only screen and (max-width: 992px) {
   .about_btn {
