--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -7,6 +7,7 @@
   position: relative;
   z-index: 90;
   cursor: pointer;
+  margin: 4rem 0;
 }
 
 .portfolio_content {
@@ -14,19 +15,19 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 300px;
+  height: 100%;
   background: linear-gradient(rgb(0, 13, 107, 0.6), rgb(0, 13, 107, 0.6));
   z-index: 91;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  transform: translateY(-20%);
+  transform: translateY(30px);
   opacity: 0;
-  transition: 0.4s;
+  transition: all 2s;
   border-radius: 5px;
   cursor: pointer;
-  margin: 4rem 0rem;
+  padding: 4rem 0rem;
 }
 
 .portfolio_card:hover .portfolio_content {
@@ -55,8 +56,7 @@
 
 .portfolio_img img {
   border-radius: 5px;
-  height: 300px;
-  margin: 4rem 0rem;
+  /* margin: 0rem 0; */
 }
 
 .buttons {
