--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -27,7 +27,7 @@
   transition: all 2s;
   border-radius: 5px;
   cursor: pointer;
-  padding: 4rem 0rem;
+  padding: 2rem 0rem;
 }
 
 .portfolio_card:hover .portfolio_content {
@@ -63,4 +63,13 @@
   display: flex;
   justify-content: space-between;
   gap: 2rem;
+}
+
+@media screen and (max-width: 480px) {
+  .portfolio_content h5 {
+    font-size: 1rem;
+  }
+  .portfolio_content p {
+    font-size: 0.6rem;
+  }
 }
