--- a/src/components/About/Skills.css
+++ b/src/components/About/Skills.css
@@ -1,11 +1,14 @@
 .skills_wrapper {
+  display: flex;
+  max-width: 100%;
   background: #132347;
   padding: 20px;
   border-radius: 10px;
+  overflow: auto;
 }
 
 .skill_bar {
-  width: 100%;
+  max-width: 100%;
   height: 5px;
   position: relative;
   background: #7865ff;
@@ -13,23 +16,12 @@
   z-index: 999;
 }
 
-/* .skill_bar-percentage {
-  background: ;
-
-  height: 5px;
-  position: absolute;
-  z-index: 1000;
-  top: 0;
-  left: 0;
-  border-radius: 50px;
-} */
-
 .skill_title span {
   color: #fff;
 }
 
 .skill_title {
-  margin-bottom: 10px;
+  margin-bottom: 0.1rem;
 }
 
 @media only screen and (max-width: 992px) {
